--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,21 +10,21 @@ environment:
 dependencies:
   auto_route: ^9.3.0+1
   cupertino_icons: ^1.0.8
+  dart_mappable: ^4.3.0
   equatable: ^2.0.7
   flutter:
     sdk: flutter
   forui: ^0.7.0
-  freezed_annotation: ^2.4.4
-  json_annotation: ^4.9.0
   modal_bottom_sheet: ^3.0.0
+  pull_down_button: ^0.10.2
+  super_cupertino_navigation_bar: ^2.1.2
 
 dev_dependencies:
   auto_route_generator: ^9.0.0
   build_runner: ^2.4.13
+  dart_mappable_builder: ^4.3.0
   flutter_test:
     sdk: flutter
-  freezed: ^2.5.7
-  json_serializable: ^6.9.0
   very_good_analysis: ^7.0.0
 
 flutter:
