feat: add skeletonizer dependency to pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   forui: ^0.7.0
   modal_bottom_sheet: ^3.0.0
   pull_down_button: ^0.10.2
+  skeletonizer: ^1.4.3
   super_cupertino_navigation_bar: ^2.1.2
 
 dev_dependencies:
