--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,15 @@ dependencies:
   equatable: ^2.0.7
   flutter:
     sdk: flutter
+  flutter_animate: ^4.5.2
+  flutter_slidable: ^3.1.2
   flutter_svg: ^2.0.17
   forui: ^0.7.0
-  modal_bottom_sheet: ^3.0.0
+  permission_handler: ^11.3.1
   pull_down_button: ^0.10.2
+  sheet: ^1.0.0
   skeletonizer: ^1.4.3
+  soft_edge_blur: ^0.1.3
   super_cupertino_navigation_bar: ^2.1.2
 
 dev_dependencies:
