--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,6 +1,8 @@
 analyzer:
   errors:
     document_ignores: ignore
+    avoid_catches_without_on_clauses: ignore
+    lines_longer_than_80_chars: ignore
 include: package:very_good_analysis/analysis_options.yaml
 
 linter:
