--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dev_dependencies:
   flutter_gen_runner: ^5.8.0
   flutter_test:
     sdk: flutter
+  mocktail: ^1.0.4
   very_good_analysis: ^7.0.0
 
 flutter:
