--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -49,5 +49,10 @@
 		<string>Vamos sincronizar seus treinos com o seu aplicativo Saúde para dar melhores insights</string>
 		<key>NSHealthUpdateUsageDescription</key>
 		<string>Vamos sincronizar seus treinos com o seu aplicativo Saúde para dar melhores insights</string>
+		<key>UIBackgroundModes</key>
+		<array>
+			<string>fetch</string>
+			<string>remote-notification</string>
+		</array>
 	</dict>
 </plist>
