--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,12 @@ environment:
 dependencies:
   auto_injector: ^2.0.5
   auto_route: ^9.3.0+1
+  cached_network_image: ^3.4.1
   cupertino_icons: ^1.0.8
   dart_mappable: ^4.3.0
+  diacritic: ^0.1.6
+  dio: ^5.7.0
+  dio_cache_interceptor: ^3.5.1
   equatable: ^2.0.7
   flutter:
     sdk: flutter
