--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   auto_injector: ^2.0.5
   auto_route: ^9.3.0+1
   cached_network_image: ^3.4.1
+  cupertino_calendar_picker: ^2.1.5
   cupertino_icons: ^1.0.8
   dart_mappable: ^4.3.0
   diacritic: ^0.1.6
@@ -24,6 +25,7 @@ dependencies:
   flutter_svg: ^2.0.17
   forui: ^0.7.0
   health: ^12.0.1
+  intl: ^0.19.0
   permission_handler: ^11.3.1
   pull_down_button: ^0.10.2
   result_dart: ^2.0.0
