--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,8 +22,9 @@ dependencies:
     sdk: flutter
   flutter_animate: ^4.5.2
   flutter_slidable: ^3.1.2
+  flutter_staggered_grid_view: ^0.7.0
   flutter_svg: ^2.0.17
-  forui: ^0.7.0
+  forui: ^0.9.0
   health: ^12.0.1
   intl: ^0.19.0
   permission_handler: ^11.3.1
@@ -33,6 +34,7 @@ dependencies:
   skeletonizer: ^1.4.3
   soft_edge_blur: ^0.1.3
   super_cupertino_navigation_bar: ^2.1.2
+  wave: ^0.2.2
 
 dev_dependencies:
   auto_route_generator: ^9.0.0
