--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: move_on_app
 description: "A fitness app."
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
@@ -24,7 +24,7 @@ dependencies:
   flutter_slidable: ^3.1.2
   flutter_staggered_grid_view: ^0.7.0
   flutter_svg: ^2.0.17
-  forui: ^0.9.0
+  forui: ^0.9.1
   health: ^12.0.1
   intl: ^0.19.0
   media_kit: ^1.1.11
