--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   auto_injector: ^2.0.5
   auto_route: ^9.3.0+1
   cached_network_image: ^3.4.1
+  cupertino_calendar_picker: ^2.1.5
   cupertino_icons: ^1.0.8
   dart_mappable: ^4.3.0
   diacritic: ^0.1.6
@@ -21,16 +22,22 @@ dependencies:
     sdk: flutter
   flutter_animate: ^4.5.2
   flutter_slidable: ^3.1.2
+  flutter_staggered_grid_view: ^0.7.0
   flutter_svg: ^2.0.17
-  forui: ^0.7.0
+  forui: ^0.9.0
   health: ^12.0.1
+  intl: ^0.19.0
+  media_kit: ^1.1.11
+  media_kit_libs_video: ^1.0.5
+  media_kit_video: ^1.2.5
   permission_handler: ^11.3.1
   pull_down_button: ^0.10.2
   result_dart: ^2.0.0
-  sheet: ^1.0.0
+  shared_preferences: ^2.5.2
   skeletonizer: ^1.4.3
   soft_edge_blur: ^0.1.3
   super_cupertino_navigation_bar: ^2.1.2
+  wave: ^0.2.2
 
 dev_dependencies:
   auto_route_generator: ^9.0.0
